RESOLVED FIXED 112745
REGRESSION(r146223): chromium asserts/crashes in DocumentLoader
https://bugs.webkit.org/show_bug.cgi?id=112745
Summary REGRESSION(r146223): chromium asserts/crashes in DocumentLoader
Nate Chapin
Reported 2013-03-19 14:40:51 PDT
Issues with r146223: * DocumentLoader::cancelMainResourceLoader() is called directly by the WebKit layer, where ports might send in a null ResourceError. Don't assume the error parameter is non-null. * m_frame->page()->defersLoading() isn't safe in all functions, turns out at least some of these checks can happen after detach. * responseReceived() needs its RefPtr back.
Attachments
patch (3.30 KB, patch)
2013-03-19 14:44 PDT, Nate Chapin
no flags
Nate Chapin
Comment 1 2013-03-19 14:44:29 PDT
Kenneth Russell
Comment 2 2013-03-19 14:47:21 PDT
Comment on attachment 193926 [details] patch Just confirming: these definitely fix the assertion failures?
Nate Chapin
Comment 3 2013-03-19 14:51:10 PDT
(In reply to comment #2) > (From update of attachment 193926 [details]) > Just confirming: these definitely fix the assertion failures? Ran cr-linux debug locally, had 2 crashes in plugin tests that appear completely unrelated and aren't crashing on the buildbots. So I'm going to say Yes :)
Kenneth Russell
Comment 4 2013-03-19 14:55:06 PDT
Comment on attachment 193926 [details] patch OK, let's get this in the tree and see whether the bots turn green.
WebKit Review Bot
Comment 5 2013-03-19 15:18:42 PDT
Comment on attachment 193926 [details] patch Clearing flags on attachment: 193926 Committed r146267: <http://trac.webkit.org/changeset/146267>
WebKit Review Bot
Comment 6 2013-03-19 15:18:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.