REGRESSION(r146223): chromium asserts/crashes in DocumentLoader https://bugs.webkit.org/show_bug.cgi?id=112745

Reviewed by Kenneth Russell.

Fixes layout tests on chromium debug

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::mainReceivedError): Frame might be detached, get
    defersLoading() from mainResourceLoader().
(WebCore::DocumentLoader::responseReceived): RefPtr got dropped, it's really needed.
(WebCore::DocumentLoader::receivedData): Frame might be detached, get
    defersLoading() from mainResourceLoader().
(WebCore::DocumentLoader::cancelMainResourceLoad): The ResourceError parameter
    can be null if coming from the WebKit layer, we should have a default just in case.


git-svn-id: svn://svn.chromium.org/blink/trunk@146267 bbb929c8-8fbe-4397-9dbb-9b2b20218538